Fix spacing

--- a/caller/src/components/HelpETA/RouteLog/style.scss
+++ b/caller/src/components/HelpETA/RouteLog/style.scss
@@ -7,7 +7,7 @@
   margin-top: 10px;
   padding: 0 2%;
   position: relative;
-  width: 95%;
+  width: 100%;
 
   .route-line {
     border-radius: 10px;
